<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CalculadoraMovil</string>
    <string name="frase">Aplicación realizada por:</string>
    <string name="action_settings">Settings</string>
    <string name="Btn1">1</string>
    <string name="Btn2">2</string>
    <string name="Btn3">3</string>
    <string name="Btn4">4</string>
    <string name="Btn5">5</string>
    <string name="Btn6">6</string>
    <string name="Btn7">7</string>
    <string name="Btn8">8</string>
    <string name="Btn9">9</string>
    <string name="Btn0">0</string>
    <string name="BtnMas">+</string>
    <string name="BtnMenos">-</string>
    <string name="BtnMulti">x</string>
    <string name="BtnPunto">.</string>
    <string name="BtnC">C</string>
    <string name="BtnDiv">÷</string>
    <string name="BtnIgual">=</string>
    
    

</resources>
